--- a/html_build/pages/profile/templates/layout.html
+++ b/html_build/pages/profile/templates/layout.html
@@ -9,7 +9,7 @@
 	<!-- <div id="video-wrap" class="clearfix"></div> -->
 		<div id="image-wrap" class="clearfix clear">
 		</div>
-		<div id="add-media" class="clearfix">add media</div>
+		<!--div id="add-media" class="clearfix">add media</div-->
 	</div>
 	
 	<div class="row-fluid">
@@ -23,7 +23,7 @@
 	<div class="green-left-heading">GAMES</div>
 	<div id="games_div" class="clearfix">
 		<!--div class="game-box-outer">
-			<ul>
+		s	<ul>
 				<li><a href="javascript: void(0);" class="background-blue">a</a></li>
 				<li><a href="javascript: void(0);" class="background-orange">b</a></li>
 				<li><a href="javascript: void(0);" class="background-orange">c</a></li>
