--- a/html/usercontrols/photo-player/templates/player.html
+++ b/html/usercontrols/photo-player/templates/player.html
@@ -4,7 +4,10 @@
 			<li><a href="javascript: void(0);" class="photo-player-tag-photo-h" title="tag photo">Tag Photo</a></li>
 			<li><a href="javascript: void(0);" class="photo-player-tag-myself-h" title="tag my self">Tag Myself</a></li>
 			<li><a href="javascript: void(0);" class="photo-player-vote-h" title="vote">Vote</a></li>
-			<li><a href="javascript: void(0);" class="share-on-facebook-h" title="share on facebook">Share on facebook</a></li>			
+			<li class="icon-parent"><a href="javascript: void(0);" class="player-share share-on-h" data-share="facebook" title="share on facebook"></a></li>
+			<li class="icon-parent"><a href="javascript: void(0);" class="player-share share-on-h" data-share="twitter" title="share on twitter"></a></li>						
+			<li class="icon-parent"><a href="javascript: void(0);" class="player-share share-on-h" data-share="gplus" title="share on google plus"></a></li>
+			<li class="icon-parent"><a href="javascript: void(0);" class="player-share share-on-h" data-share="tumbler" title="share on tumbler"></a></li>															
 			<!--li><div class="fb-share-button" data-href="http://developers.facebook.com/docs/plugins/" data-type="box_count"></div></li-->
 		</ul>
 
