--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -15,17 +15,7 @@
 <link href='http://fonts.googleapis.com/css?family=Raleway:400,700,800,300' rel='stylesheet' type='text/css'>
 <style>body:empty{background: url(http://cdn.athletez.com/resources/img/main-loading.gif) no-repeat center top;}</style>
 <script>var base_url='{{base_url}}',testpath=false,cdn='{{cdn}}',s3='{{s3}}';</script>
-<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 <script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-45111767-1',{cookieDomain:'none'});
-ga('send', 'pageview');
-
-
 // Avoid 'console' errors in browsers that lack a console.
 (function() {
     var method;
@@ -38,7 +28,6 @@ ga('send', 'pageview');
     ];
     var length = methods.length;
     var console = (window.console = window.console || {});
-
     while (length--) {
         method = methods[length];
 
@@ -48,5 +37,23 @@ ga('send', 'pageview');
         }
     }
 }());
+</script></head><body><script>if (!window.jQuery) {
+	var fileref = document.createElement('script');
+	fileref.setAttribute("type", "text/javascript");
+	fileref.setAttribute("src", '/vendor/jquery.1.10.2.min.js');
+	fileref.async = false;
+	fileref.onload = function() {
+		var reqjs = document.createElement('script');
+		reqjs.setAttribute("type", "text/javascript");
+		reqjs.setAttribute("src", '{{base_url}}vendor/require.js');
+		reqjs.setAttribute("data-main", "{{base_url}}main");
+		document.getElementsByTagName('body')[0].appendChild(reqjs);
+	};
+	document.getElementsByTagName('body')[0].appendChild(fileref);
+}</script><script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-</script><script data-main="{{base_url}}main" src="{{base_url}}vendor/require.js"></script></head><body></body></html>
+ga('create', 'UA-45111767-1',{cookieDomain:'none'});
+ga('send', 'pageview');</script></body></html>
