--- a/html/pages/game/templates/header.html
+++ b/html/pages/game/templates/header.html
@@ -18,7 +18,7 @@
 		<p>
 			{{game_day}} {{game_time}} - {{game_location}}
 		</p>
-		{{^shared}}<a href="javascript: void(0);" class="add-to-event common-btn common-default-sky-dark pull-right" title="Add me to this Event">Add me to this Event</a>{{/shared}}
+		{{^shared}}<!--a href="javascript: void(0);" class="add-to-event common-btn common-default-sky-dark pull-right" title="Add me to this Event">Add me to this Event</a-->{{/shared}}
 
 	</div>
 
