--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1846,14 +1846,12 @@ li#add-icons ul {
 
 #roster-wrap ul li.teams, #add-participants-icons, #add-fans-icons {
 	width: 220px;
-	/*line-height: 200px;*/
 	text-align: center;
 }
 
 #add-participants-icons a, #add-fans-icons a {
-	background-image: url('images/icons/add-team.png');
-	background-size: cover;
-	min-height: 220px;
+	height: 220px;
+	line-height: 220px;
 	width: 220px;
 	float: left;
 	display: inline-block;
