put in timestamp so I can track crawling.

--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -3,6 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!-- {{date_indexed}} -->
 <head><meta charset="utf-8"><title>{{title}}</title>
 <meta name="viewport" content="width=device-width">
 <link rel="shortcut icon" href="{{base_url}}images/favicon.ico">
