--- a/html/packages/fbinvite/templates/image-item.html
+++ b/html/packages/fbinvite/templates/image-item.html
@@ -3,7 +3,7 @@
 		<img itemprop="image" class="list-thumbnail" src="{{picture.data.url}}" alt=""/>
 
 		<div class="action-section">
-				<div class="action-block right-block follow invite-h" data-id="{{id}}" ><span>Invite</span></div>
+				<div class="action-block left-block follow invite-h" data-id="{{id}}" ><span>Invite</span></div>
 		</div>
 		<div class="detail-view {{#_detailclass}}{{_detailclass}}{{/_detailclass}}">
 			<h6>{{name}}</h6>
