changed image reference.

--- a/html/packages/fbinvite/templates/image-item.html
+++ b/html/packages/fbinvite/templates/image-item.html
@@ -1,6 +1,6 @@
 <a href="javascript: void(0);" data-index="{{index}}" data-id="{{id}}" class="image-outer-h">
 	<div class="image-item-container">
-		<img itemprop="image" class="list-thumbnail" src="{{picture.data.url}}" alt=""/>
+		<img itemprop="image" class="list-thumbnail" src="{{large}}" alt=""/>
 
 		<div class="action-section">
 				<div class="action-block left-block follow invite-h" data-id="{{id}}" ><span>Invite</span></div>
