--- a/html/usercontrols/landing/templates/landing.html
+++ b/html/usercontrols/landing/templates/landing.html
@@ -1,10 +1,22 @@
 <div style="margin: auto; text-align: center; height: 30px;"> </div><div id="landing-info">
 	<div id="landing-header"><!--<img src="http://cdn.athletez.com/resources/img/a_logo_smaller.png" style="width:50px; float: left;" />-->
+		{{#firstname}}
+		Hey {{firstname}}
+		{{/firstname}}
+		{{^firstname}}		
 		Athletez Live Here.
+		{{/firstname}}
 		<hr />
 	</div>
 	<div id="site-info">
+			{{#firstname}}
+		Thanks for accepting your invitation! Since you're already on facebook, we recommend using the "Connect With Facebook" option below.
+		{{/firstname}}
+		{{^firstname}}		
 		And we mean all athletes.  It's simple: create a profile, connect with your team, share your games, post your highlights, get discovered.
+		{{/firstname}}
+	
+
 		<hr />
 	</div>
 </div>
