--- a/html/pages/profilesetting/templates/highschool.html
+++ b/html/pages/profilesetting/templates/highschool.html
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<span class="green-left-heading">School</span>
+	<span class="green-left-heading">School Teams</span>
 </div>
 <div id="btn-Add-School" class="clearfix div-add-dotted">
 	+ Add a school
@@ -15,7 +15,7 @@
 	<div>
 		<span class="span2">What School?</span>
 		<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled"/>
-		<a class="add-school-h" href="javascript: void(0);">School Not Listed</a>
+		<a class="add-school-h" href="javascript: void(0);">Couldn't Find your School?</a>
 		<p class="field-error"></p>
 		<p class="field-message"></p>
 	</div>
