--- a/html/packages/media/templates/add-media.html
+++ b/html/packages/media/templates/add-media.html
@@ -1,2 +1,8 @@
+{{#links}}
+	<div>
+	<a href="{{link}}" title="{{label}}" id="{{id}}">
+	</a>
+	<span class="hide">{{label}}</span>		
+	</div>
 
-{{#links}}<li><a href="{{link}}" title="{{label}}" id="{{id}}">{{label}}</a></li>{{/links}}
+{{/links}}
