--- a/html/packages/user/templates/fitnessbasic-item.html
+++ b/html/packages/user/templates/fitnessbasic-item.html
@@ -2,7 +2,13 @@
 	{{#data}}
 		<div class="fitness-overview-data-piece" style="">
 			<img title="{{name}}" src="{{icon}}" style=""/>
-			<span style="">{{#val}}{{val}}{{/val}}{{^val}}--{{/val}}</span>
+			<span class="stat-val-outer">
+				{{#val}}
+					<span class="stats-val-h">{{val}}</span>
+					<input type="text" data-id="{{id}}" class="stats-input stats-input-h hide-force" value="{{val}}"/>
+				{{/val}}
+				{{^val}}--{{/val}}
+				</span>
 		</div>
 	{{/data}}
 {{/payload}}
