--- a/html/packages/user/templates/fitnessbasic-item.html
+++ b/html/packages/user/templates/fitnessbasic-item.html
@@ -11,5 +11,13 @@
 				</span>
 		</div>
 	{{/data}}
+	
+	{{^data}}
+		<div class="stats-empty-area">
+			Either no sport is selected,
+			or the selected sport has no 
+			atheletic metrices to fill out.
+		</div>
+	{{/data}}
 {{/payload}}
 
