--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -4,28 +4,19 @@
 	<div class="profile-heading" itemscope itemtype="http://schema.org/Person">
 		<div class="sports-h"></div>
             <h3 class="username" itemprop="name">{{name}}</h3><h3> {{#grad_year}}'{{grad_year}}{{/grad_year}}</h3>
-			<h3>&nbsp;</h3>
+			<h5 class="sports-name-h"></h5>
     </div>
 	
 	<div class="row-fluid profile-pic-outer">
 		<div class="span7 border-right">
 			<ul class="span6 textcenter image-outer-h">
 			</ul>
-		    <!--div class="span6 textcenter">
-		        {{#user_picture_obj}}
-		        <img src="{{base_url}}{{image_path}}" alt="{{name}}" />
-			    <div id="votes-area-h"></div>
-		        {{/user_picture_obj}}
-		    </div-->
-		    
 		    <div class="span6">
-			    	<!--<div class="school-name">ORG NAME</div>
-			    	<div class="city">LOCATION</div>-->
-			    	<div class="teams">
-			    		 <div id="sports-info"></div>
-			    	</div>
-			    	<div class="height">{{#height_ft}}{{height_ft}}{{/height_ft}}</div>
-			    	<div class="weight">{{#weight_lb}}{{weight_lb}} lbs{{/weight_lb}}</div>
+		    	<div class="teams">
+		    		 <div id="sports-info"></div>
+		    	</div>
+		    	<div class="height">{{#height_ft}}{{height_ft}}{{/height_ft}}</div>
+		    	<div class="weight">{{#weight_lb}}{{weight_lb}} lbs{{/weight_lb}}</div>
 	       </div>
 	    </div>
 	    
@@ -34,8 +25,6 @@
 	    	<div id="fitnessbasic-wrap"></div>
 	    </div>
 	</div>    
-    
-   </div>
-    
+   </div>    
 </div>
 {{/payload}}
