--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -13,6 +13,7 @@
 			</ul>
 		    <div class="span6">
 		    	<div class="teams">
+		    		<h4>Teams</h4>
 		    		 <div id="sports-info"></div>
 		    	</div>
 		    	<div class="height">{{#height_ft}}{{height_ft}}{{/height_ft}}</div>
