--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -22,7 +22,7 @@
 	    </div>
 	    
 	    <div class="stats-panel span5" style="width:35%;">
-	    	<div class="stats-header"><span id="profileName"></span>Stats</div>
+	    	<div class="stats-header"><span id="profileName"></span>Stats{{#loggedInUser}}<span class="edit-message">Click to edit</span>{{/loggedInUser}}</div>
 	    	<div id="fitnessbasic-wrap"></div>
 	    </div>
 	</div>    
