--- a/html/css/app.css
+++ b/html/css/app.css
@@ -899,13 +899,13 @@ li.fitnessbasic {
 .stats-panel {
 	background-color: #e0e0e0;
 	padding: 0;
-	width: 35%
+	width: 35%;
 	min-height: 210px;
 }
 
 .stats-header {
 	background-color: #b9b9ba;
-	font-family: 'Nunito', 'HelveticaNeue';
+	font-family: 'Raleway';
 	font-weight: bold;
 	font-size: 1.7em;
 	padding: 10px;
@@ -928,7 +928,7 @@ li.fitnessbasic {
 span.team-label, span.event-sport-label {
 	display: inline-block;
 	margin-left: 100px;
-	font-family: 'Nunito', 'HelveticaNeue';
+	font-family: 'Helvetica Neue';
 	font-weight: bolder;
 	font-size: 1.1em;
 }
@@ -2046,8 +2046,11 @@ li.sport .teamlist-header, .stat-val-outer {
 }
 
 .edit-message {
+    font-weight: lighter;
+    color: #e3e3e3;
 	font-size: .7em;
 	padding-left: 10px;
+    float: right;
 }
 
 
