--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -4,7 +4,7 @@
 	<div class="profile-heading" itemscope itemtype="http://schema.org/Person">
 		<div class="sports-h"></div>
             <h3 class="username" itemprop="name">{{name}}</h3><h3> {{#grad_year}}'{{grad_year}}{{/grad_year}}</h3>
-			<h5 class="sports-name-h"></h5>
+			<h4 class="sports-name-h"></h4>
     </div>
 	
 	<div class="row-fluid profile-pic-outer">
@@ -22,7 +22,7 @@
 	    </div>
 	    
 	    <div class="stats-panel span5" style="width:35%;">
-	    	<div class="stats-header"><span id="profileName"></span>Stats{{#loggedInUser}}<span class="edit-message">Click to edit</span>{{/loggedInUser}}</div>
+	    	<div class="stats-header"><span id="profileName"></span>Stats{{#loggedInUser}}<span class="edit-message">(Click to change something)</span>{{/loggedInUser}}</div>
 	    	<div id="fitnessbasic-wrap"></div>
 	    </div>
 	</div>    
