--- a/html/css/app.css
+++ b/html/css/app.css
@@ -697,16 +697,16 @@ span.ui-helper-hidden-accessible {
 }
 
 .bubble .content p.comment-text {
-	font-family: inherit;
-	font-weight: normal;
-	font-size: .9em;
-	padding: 4px;
+    font-family: inherit;
+    font-weight: normal;
+    font-size: .8em;
+    padding: 5px 10px 5px 15px;
 }
 
 .pointer {
 	content: "";
 	position: absolute;
-	bottom: 16px;
+	top: 35px;
 	left: -40px;
 	display: block;
 	width: 0;
@@ -714,9 +714,9 @@ span.ui-helper-hidden-accessible {
 	border-color: transparent rgb(229, 229, 229);
 	border-style: solid;
 	border-width: 18px 77px 18px 0;
-	-webkit-transform: rotate(-25deg);
-	-ms-transform: rotate(-25deg);
-	transform: rotate(-25deg);
+	-webkit-transform: rotate(15deg);
+	-ms-transform: rotate(15deg);
+	transform: rotate(15deg);
 }
 
 .see-more-h {
