--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1018,11 +1018,12 @@ a.add-game-h {
 0% { background: #000; }
 100% { background: #FF0; }
 }
-.newly-added-comment {
+
+/*.newly-added-comment {
 	-webkit-animation: blink 1s ease-in-out 1;
 	-moz-animation: blink 1s ease-in-out 1;
 	animation: blink 1s ease-in-out 1;
-}
+}*/
 
 #new-comment {
 	width: 65%;
