altered FB invite popup

--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -9,11 +9,11 @@
 	<meta property="twitter:card" content="summary" />
 	<meta property="twitter:site" content="@RealAthletez" />
 	<meta property="twitter:domain" content="athletez.com" />
-	<meta property="og:title" content="Athletez -- A Community of Athletez" />
+	<meta property="og:title" content="Athletez -- A Community of Athletes" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://www.athletez.com/" />
-	<meta property="og:description" content="Athletez - A social network for athletes of all ages and skill levels to revel in the joy of doing awesome stuff" />
-	<meta property="og:image" content="http://cdn.athletez.com/resources/img/athletez_logo_small.png" />
+	<meta property="og:description" content="Athletez - A social network for athletes of all ages and skill levels to revel in the joy of doing awesome stuff." />
+	<meta property="og:image" content="http://cdn.athletez.com/resources/img/athletez_logo_A.png" />
 <link rel="shortcut icon" href="{{base_url}}images/favicon.ico">
 <link rel="apple-touch-icon" href="{{base_url}}images/apple-touch-icon-iphone.png" />
 <link rel="apple-touch-icon" sizes="72x72" href="{{base_url}}images/apple-touch-icon-ipad.png" />
