--- a/html_build/packages/user/templates/fitnessbasic-item.html
+++ b/html_build/packages/user/templates/fitnessbasic-item.html
@@ -2,7 +2,17 @@
 	{{#data}}
 		<div class="fitness-overview-data-piece" style="">
 			<img title="{{name}}" src="{{icon}}" style=""/>
-			<span style="">{{#val}}{{val}}{{/val}}{{^val}}--{{/val}}</span>
+			<span class="stat-val-outer">
+				<span class="stats-val-h">{{#val}}{{val}}{{/val}}{{^val}}--{{/val}}</span>
+				<input type="text" data-id="{{id}}" class="stats-input stats-input-h hide-force" value="{{#val}}{{val}}{{/val}}{{^val}}{{/val}}"/>
+			</span>
+		</div>
+	{{/data}}
+	{{^data}}
+		<div class="stats-empty-area">
+			Either no sport is selected,
+			or the selected sport has no 
+			atheletic metrices to fill out.
 		</div>
 	{{/data}}
 {{/payload}}
