--- a/html_build/pages/profilesetting/templates/club.html
+++ b/html_build/pages/profilesetting/templates/club.html
@@ -1,5 +1,5 @@
 <div class="row-fluid">
-	<span class="green-left-heading">Clubs</span>
+	<span class="green-left-heading">Club Teams</span>
 </div>
 <div id="btn-Add-club" class="div-add-dotted">
 	+ Add a Club
@@ -15,7 +15,7 @@
 <div>
 	<span class="span2">What Club?</span>
 	<input type="text" id="txt-club-club" placeholder="Just Start Typing" disabled="disabled" tabindex="1"/>
-	<a class="add-club-h" href="javascript: void(0);">Club Not Listed?</a>
+	<a class="add-club-h" href="javascript: void(0);">Couldn't Find your Club?</a>
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 </div>
