--- a/html/pages/fbinvite/fbinvite.css
+++ b/html/pages/fbinvite/fbinvite.css
@@ -5,3 +5,11 @@
     left: 50%;
     margin-left: -537px;
 }
+
+#fbInvite .modal-body{
+    position: absolute;
+    height: 100%;
+    width: 98%;
+    padding: 0;
+    overflow-y: scroll;
+}
