--- a/html/pages/chrome/templates/header.html
+++ b/html/pages/chrome/templates/header.html
@@ -36,7 +36,7 @@
                 <a class="dropdown-toggle" data-toggle="dropdown">{{user_name}} <b class="caret"></b></a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                     {{#nav}}
-                        <li><a href="{{link}}" {{#id}} id="{{id}}" {{/id}} >{{page}}</a></li>
+                        <li><a href="{{link}}" {{#id}} id="{{id}}" {{/id}} {{#className}} class="{{className}}" {{/className}}>{{page}}</a></li>
                     {{/nav}}
 
                 </ul>
