--- a/html/pages/profile/templates/sport-team.html
+++ b/html/pages/profile/templates/sport-team.html
@@ -1,5 +1,6 @@
 {{#records}}
 	{{#payload}}
+	{{#name}}
 	<div>
 		<span class="icon-circle-arrow-right team-list-icon"></span><div class="teamlist-header">{{name}}</div>
 		{{#sports}}
@@ -10,5 +11,6 @@
 			{{/.}}
 	    {{/sports}}
     </div>
+    {{/name}}
 {{/payload}}
 {{/records}}
