--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1548,7 +1548,7 @@ div.game-info .game-score .team-score.win {
 	min-height: 110px;
 	width: 110px;
 	background-size: contain;
-	background-color: #4b3dc6;
+	background-color: #928add;
 }
 
 #add-icons {
