--- a/html/usercontrols/landing/templates/landing.html
+++ b/html/usercontrols/landing/templates/landing.html
@@ -9,8 +9,10 @@
 		<hr />
 	</div>
 	<div id="site-info">
-			{{#firstname}}
-		Thanks for accepting your invitation! Since you're already on facebook, we recommend using the "Connect With Facebook" option below.
+		{{#firstname}}
+			{{#label}}You've been invited to join {{label}}.{{/label}}
+			{{^label}}Thanks for accepting your invitation!{{/label}}
+			Since you're already on facebook, we recommend using the "Connect With Facebook" option below.
 		{{/firstname}}
 		{{^firstname}}		
 		And we mean all athletes.  It's simple: create a profile, connect with your team, share your games, post your highlights, get discovered.
