--- a/html_build/pages/profile/templates/sport-team.html
+++ b/html_build/pages/profile/templates/sport-team.html
@@ -1,7 +1,8 @@
 {{#records}}
 	{{#payload}}
+	{{#name}}
 	<div>
-	<span class="icon-circle-arrow-right team-list-icon"></span><div class="teamlist-header">{{name}}</div>
+		<span class="icon-circle-arrow-right team-list-icon"></span><div class="teamlist-header">{{name}}</div>
 		{{#sports}}
 			{{#.}}
 				{{#teams}}
@@ -10,6 +11,6 @@
 			{{/.}}
 	    {{/sports}}
     </div>
+    {{/name}}
 {{/payload}}
-    <br/>
 {{/records}}
