--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -15,12 +15,16 @@
 					<div id="sports-info"></div>
 					<a href="javascript: void(0);" class="see-more-teams-h hide">Show All</a>
 				</div>
+				{{#height_ft}}
 				<div class="height">
-					{{#height_ft}}{{height_ft}}{{/height_ft}}
+					{{height_ft}}
 				</div>
+				{{/height_ft}}
+				{{#weight_lb}}
 				<div class="weight">
-					{{#weight_lb}}{{weight_lb}} lbs{{/weight_lb}}
+					{{weight_lb}} lbs
 				</div>
+				{{/weight_lb}}
 			</div>
 		</div>
 
