--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -11,7 +11,7 @@
 			<ul class="span6 textcenter image-outer-h"></ul>
 			<div class="span6">
 				<div class="teams">
-					<h4>Teams</h4>
+					<h4 class="hide">Teams</h4>
 					<div id="sports-info"></div>
 					<a href="javascript: void(0);" class="see-more-teams-h hide">Show All</a>
 				</div>
