--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1670,9 +1670,18 @@ form fieldset > div {
 /*form fieldset > div > div { float: left; }*/
 
 div[data-error] {
-	color: #FF0000;
+    display: block;
+	color: #a30000;
+    position: absolute;
+    border: 4px solid #787878;
+    padding: 5px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
 }
 
+div[data-error]:empty{
+    display: none !important;
+}
 .focus-error-animation {
 	border: 5px solid #FF0000 !important;
 	border-radius: 5px !important;
