removed academic sections

--- a/html/pages/userresume/templates/layout.html
+++ b/html/pages/userresume/templates/layout.html
@@ -15,19 +15,19 @@
 	</div>
 <!-- Rd Tree Section Ends -->
 
-<!-- Academic Gpa Section Starts -->
+<!-- Academic Gpa Section Starts
 	<div id="section-academic">
 		
 	</div>
 <!-- Academic Gpa Section Ends -->
 
-<!-- User Awards Section Starts -->
+<!-- User Awards Section Starts
 	<div id="section-awards">
 		
 	</div>
 <!-- User Awards Section Ends -->
 
-<!-- User References Section Starts -->
+<!-- User References Section Starts
 	<div id="section-references">
 		
 	</div>
