--- a/html/usercontrols/tag/templates/layout.html
+++ b/html/usercontrols/tag/templates/layout.html
@@ -37,7 +37,7 @@
 	<div class="section-tag-team_h displayNone section_outer">
 		Tag a Team : 
 		<br/>
-		<input type="text" class="txt-tag-team-state_h" placeholder="Enter State" />
+		<input type="text" class="txt-tag-team-state_h displayNone" placeholder="Enter State" />
 		<div class="clear"></div>
 		<input type="text" class="txt-tag-team-city_h displayNone" placeholder="Enter City" />
 		<div class="clear"></div>
@@ -105,9 +105,9 @@
 	<div class="section-link_h displayNone section_outer">
 		Tag:
 		<a href="javascript:void(0)" class="link-tag-team_h">Team&nbsp;</a>
-		<a href="javascript:void(0)" class="link-tag-player_h displayNone">Player&nbsp;</a>
-		<a href="javascript:void(0)" class="link-tag-Game_h displayNone">Game&nbsp;</a>
-		<a href="javascript:void(0)" class="link-tag-event_h displayNone">Event&nbsp;</a>
+		<a href="javascript:void(0)" class="link-tag-player_h">Player&nbsp;</a>
+		<a href="javascript:void(0)" class="link-tag-Game_h ">Game&nbsp;</a>
+		<a href="javascript:void(0)" class="link-tag-event_h ">Event&nbsp;</a>
 		<div class="clear"></div>
 		<span class="displayNone field-message"></span>
 	</div>
