--- a/html/pages/profile/templates/header.html
+++ b/html/pages/profile/templates/header.html
@@ -15,19 +15,9 @@
 					<div id="sports-info"></div>
 					<a href="javascript: void(0);" class="see-more-teams-h hide">Show All</a>
 				</div>
-				{{#height_ft}}
-				<div class="height">
-					{{height_ft}}
-				</div>
-				{{/height_ft}}
-				{{#weight_lb}}
-				<div class="weight">
-					{{weight_lb}} lbs
-				</div>
-				{{/weight_lb}}
 			</div>
 		</div>
-
+		
 		<div class="stats-panel span5" style="width:35%;">
 			<div class="stats-header">
 				<span id="profileName"></span>Stats{{#loggedInUser}}<span class="edit-message">Click to edit</span>{{/loggedInUser}}
@@ -35,6 +25,19 @@
 			<div id="fitnessbasic-wrap"></div>
 		</div>
 	</div>
+			<div class="profile-info">
+			{{#height_ft}}
+				<div class="height">
+					Height: {{height_ft}}
+				</div>
+				{{/height_ft}}
+				{{#weight_lb}}
+				<div class="weight">
+					Weight: {{weight_lb}} lbs
+				</div>
+			{{/weight_lb}}
+		</div>
+
 </div>
 </div>
 {{/payload}}
