--- a/html/usercontrols/photo-player/photoPlayer.css
+++ b/html/usercontrols/photo-player/photoPlayer.css
@@ -189,7 +189,7 @@ div.right-arrow-container > img{
 }
 
 .image-actions {
-    position: relative;
+    position: absolute;
     top: 30px;
     left: 50px;
     z-index: 10000;
